fixed: The button download now has my resume and the navigation buttons were updated to be more readable

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,12 +24,12 @@
     }
 }
 
+
 /* Main */
 body {
     background: linear-gradient(135deg, #121212, #1A1A1A);
     color: #FFFFFF; /* Bright white text color for contrast */
     margin: 0; /* Removes default margin */
-    /*padding: 20px; !* Adds padding for content *!*/
 }
 
 h1 {
@@ -120,4 +120,66 @@ h1 {
 
 .section--list a:hover {
     background-color: rgba(255, 255, 255, 0.2); /* Lighten background on hover */
+}
+
+
+/* Navigator buttons in the main page */
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.section-button {
+    background-color: transparent;
+    border: 2px solid #FFC107; /* Yellow outline */
+    color: #FFC107; /* Yellow text */
+    padding: 15px 30px;
+    margin: 10px;
+    font-size: 1em;
+    cursor: pointer;
+    border-radius: 8px;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s, color 0.3s, transform 0.3s;
+}
+
+.section-button:hover {
+    background-color: #FFC107; /* Yellow background on hover */
+    color: #000000; /* Black text on hover */
+    transform: scale(1.05);
+}
+
+.section-button:active {
+    background-color: #FFB300; /* Slightly different yellow when active */
+    color: #000000; /* Black text when active */
+    transform: scale(0.95);
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 140px;
+    background-color: #000000;
+    color: #FFFFFF;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%; /* Position above the element */
+    left: 50%;
+    margin-left: -70px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
